JEAP-5456: Refactor Group List View